# aniplayer

./: .env.example  .gitignore  .prettierignore  README.md  ROADMAP.md  eslint.config.mjs  index.html  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml
app/: globals.css  layout.tsx  page.tsx
app/continue/: page.tsx
app/favorites/: page.tsx
app/settings/: page.tsx
app/watchlist/: page.tsx
components/app/: anilist-connect-button.tsx  anilist-grid.tsx  anilist-tracking-panel.tsx  anime-card.tsx  (+13 more)
docs/: desktop-smoke.md
hooks/: use-anilist-auth.ts  use-anilist-favorites.ts  use-anilist-media.ts  use-anilist-progress.ts  use-anilist-watching.ts  use-anime-detail.ts  use-auto-match-library.ts  use-continue-watching.ts  use-countdown.ts  use-detail-layout.ts  use-downloads.ts  use-library-folder.ts  use-library.ts  use-mappings.ts  use-player.ts  use-realdebrid.ts  use-watched.ts
lib/: anilist-auth.ts  anilist.ts  app-config.ts  auto-match.ts  backend.ts  data-dir.ts  detail-layout.ts  downloader.ts  downloads-store.ts  episode-model.ts  episode-parser.ts  gradient.ts  kitsu-map.ts  library-paths.ts  library.ts  mapping-store.ts  navigation.ts  organizer.ts  player-backend.ts  real-debrid-api.ts  realdebrid-auth.ts  realdebrid.ts  resolve-source.ts  torrentio.ts  types.ts  vlc.ts  watched-store.ts  watched.ts
scripts/: desktop-prepare.mjs  desktop-sidecar.mjs  desktop-stage.mjs
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  player.rs
(+29 files in other folders)
