[package]
name = "aniplayer"
version = "0.1.0"
description = "Desktop shell for Aniplayer"
authors = ["Yannick"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aniplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
reqwest = { version = "0.13.3", features = ["json", "stream", "rustls"] }
chrono = "0.4.45"
urlencoding = "2.1.3"
futures-util = "0.3.32"
regex = "1.12.4"
